--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^6.1.2
+  font_awesome_flutter: '>= 4.7.0'
 
 
   # The following adds the Cupertino Icons font to your application.
